--- a/src/pages/Document/document.scss
+++ b/src/pages/Document/document.scss
@@ -10,4 +10,8 @@
 .table__wrapper {
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  gap: 20px;
+  max-width: 800px;
+  margin: 0 auto;
 }
